testData/diagnostics/delete_base.diag.txt
testData/diagnostics/delete_base.nut line = (1) column = (0) : error: can't delete 'base'
delete base
^----------

